# bevy_map_editor

./: .gitignore  CLAUDE.md  Cargo.toml  CUsersxblinAppDataLocalTempclaudeC--Dev-Workspace-bevy-map-editor0748a088-cb13-4999-b585-871e7e49b2d4scratchpadfull_patch.diff  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml
agents/: architecture.md  automap_ux_spec.md  barclay.md  captains_log.md  geordi.md  guinan.md  guinan_report.md  incident_log.md  lead_notes.md  permissions.md  protocol_violations.md  remmick.md  retro_log.md  riker.md  riker_claude_md_proposals.md  ro.md  software-engineer.md  sr-software-engineer.md  tasks.md  test-engineer.md  testing.md  ux-designer.md  wesley.md
agents/architecture/: architecture.md  sprint_log.md  testing.md
agents/quarters/barclay/: padd.md
agents/quarters/data/: padd.md
agents/quarters/geordi/: padd.md
agents/quarters/picard/: log 1 - automapping sprint state.md  padd.md
agents/quarters/riker/: padd.md
agents/quarters/ro/: padd.md
agents/quarters/troi/: padd.md
agents/quarters/wesley/: padd.md
agents/quarters/worf/: padd.md
agents/ship_log/: mission 1 - collision editor.md  mission 2 - automapping.md
crates/bevy_map/: Cargo.toml
crates/bevy_map/src/: lib.rs
crates/bevy_map_animation/: Cargo.toml  README.md
crates/bevy_map_animation/src/: lib.rs
crates/bevy_map_automap/: Cargo.toml
crates/bevy_map_automap/src/: apply.rs  lib.rs  types.rs
crates/bevy_map_autotile/: Cargo.toml  README.md
crates/bevy_map_autotile/src/: config.rs  legacy.rs  lib.rs  terrain.rs  wang.rs
crates/bevy_map_codegen/: Cargo.toml  README.md
crates/bevy_map_codegen/src/: entities.rs  enums.rs  generator.rs  lib.rs  scaffold.rs  stubs.rs
crates/bevy_map_codegen/src/behaviors/: health.rs  mod.rs  patrol.rs  platformer.rs  topdown.rs
crates/bevy_map_core/: Cargo.toml  README.md
crates/bevy_map_core/src/: collision.rs  entity.rs  layer.rs  level.rs  lib.rs  project.rs  tileset.rs  value.rs
crates/bevy_map_derive/: Cargo.toml  README.md
crates/bevy_map_derive/src/: lib.rs
crates/bevy_map_dialogue/: Cargo.toml  README.md
crates/bevy_map_dialogue/src/: lib.rs
crates/bevy_map_editor/: Cargo.toml  README.md
crates/bevy_map_editor/src/: external_editor.rs  lib.rs  testing.rs
crates/bevy_map_editor/src/commands/: clipboard.rs  command.rs  mod.rs  shortcuts.rs
crates/bevy_map_editor/src/preferences/: file.rs  mod.rs
crates/bevy_map_editor/src/project/: file.rs  mod.rs
crates/bevy_map_editor/src/render/: mod.rs
crates/bevy_map_editor/src/tools/: mod.rs
crates/bevy_map_editor/src/ui/: animation_editor.rs  asset_browser.rs  automap_editor.rs  dialog_box.rs  dialogs.rs  dialogue_editor.rs  entity_palette.rs  game_settings_dialog.rs  inspector.rs  menu_bar.rs  mod.rs  new_project_dialog.rs  schema_editor.rs  settings_dialog.rs  spritesheet_editor.rs  terrain.rs  terrain_palette.rs  theme.rs  tileset.rs  tileset_editor.rs  toolbar.rs  tree_view.rs  world_view.rs
crates/bevy_map_integration/: Cargo.toml
crates/bevy_map_integration/src/: editor.rs  lib.rs  manager.rs  plugin_meta.rs  prelude.rs  registry.rs
crates/bevy_map_runtime/: Cargo.toml  README.md
crates/bevy_map_runtime/assets/maps/: example_project.map.json
crates/bevy_map_runtime/examples/: hot_reload.rs  load_map.rs
crates/bevy_map_runtime/src/: camera.rs  collision.rs  entity_registry.rs  lib.rs  loader.rs  render.rs
crates/bevy_map_schema/: Cargo.toml  README.md
crates/bevy_map_schema/src/: lib.rs  types.rs  validate.rs
docs/: devlog_script.md
docs/images/: SCREENSHOTS.txt
examples/: Cargo.toml  lib.rs
examples/animation/: auto_demo.rs  manual_demo.rs  triggers_demo.rs
examples/assets/maps/: animation_demo.map.json  custom_entities_demo.map.json  dialogue_demo.map.json  example_project.map.json  platformer_example.map.json  tileset_demo.map.json
examples/assets/shaders/: marching_ants.wgsl
examples/basic_editor/: main.rs
examples/collision/: demo.rs
examples/custom_entities/: demo.rs
examples/dialogue/: auto_demo.rs  manual_demo.rs
examples/integration/: aseprite_ultra.toml  demo.rs
examples/procedural_terrain/: main.rs
examples/runtime_loader/: main.rs
examples/tileset/: demo.rs
