[package]
name = "bevy_map_animation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Animation and sprite types for bevy_map_editor"
keywords = ["bevy", "animation", "sprite", "gamedev"]
categories = ["game-development", "rendering"]
readme = "README.md"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
