[package]
name = "bevy_map_autotile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tiled-compatible terrain autotile system"
keywords = ["bevy", "tilemap", "autotile", "terrain", "wang"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy_map_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }

[features]
default = []

[lints]
workspace = true
