[package]
name = "bevy_map_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Derive macros for bevy_map_editor entity spawning"
keywords = ["bevy", "tilemap", "derive", "macro", "entity"]
categories = ["game-development"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
