[package]
name = "bevy_map_dialogue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dialogue tree types and runtime for bevy_map_editor"
keywords = ["bevy", "dialogue", "conversation", "gamedev"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
