[package]
name = "bevy_map_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Full-featured map editor for Bevy games with autotile support"
keywords = ["bevy", "tilemap", "editor", "level", "terrain"]
categories = ["game-development", "gui"]
readme = "README.md"

[[bin]]
name = "bevy_map_editor"
path = "src/bin/bevy_map_editor.rs"

[dependencies]
bevy_map_core = { workspace = true }
bevy_map_autotile = { workspace = true }
bevy_map_automap = { workspace = true }
bevy_map_schema = { workspace = true }
bevy_map_animation = { workspace = true }
bevy_map_dialogue = { workspace = true }
bevy_map_codegen = { workspace = true }
bevy_map_runtime = { workspace = true, optional = true }
bevy_map_integration = { workspace = true, features = ["editor"] }
toml = { workspace = true }
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
image = "0.25"
directories = "5"
fastrand = "2"
egui-async = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true, optional = true }

[features]
default = ["native", "integrations"]
native = ["rfd"]
runtime = ["bevy_map_runtime"]
integrations = []
wasm = []

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["snapshot", "wgpu"] }

[lints]
workspace = true
